src/main/parser/Parser.output
Terminals unused in grammar

    TYPE
    NE
    MOD
    AND
    OR
    XOR
    COMMA
    DOT
    REVERSE
    NEWLINE
    WHITESPACE
    TAB
    UNKNOWN


State 32 conflicts: 9 shift/reduce
State 55 conflicts: 9 shift/reduce
State 56 conflicts: 9 shift/reduce
State 57 conflicts: 9 shift/reduce
State 58 conflicts: 9 shift/reduce
State 59 conflicts: 9 shift/reduce
State 60 conflicts: 9 shift/reduce
State 61 conflicts: 9 shift/reduce
State 62 conflicts: 9 shift/reduce
State 63 conflicts: 9 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Declaration SEMICOLON
    2        | Statement SEMICOLON
    3        | Function SEMICOLON

    4 Declaration: VAR IDENTIFIER COLON Type IS Expression

    5 Type: INTEGER
    6     | BOOLEAN
    7     | REAL
    8     | ARRAY LBRACKET INTEGERNUMBER RBRACKET Type
    9     | RECORD Declaration END

   10 Statement: IDENTIFIER ASSIGN Expression
   11          | IF Expression THEN Statement ELSE Statement END
   12          | WHILE Expression LOOP Statement END
   13          | FOR IDENTIFIER IN Expression RANGE Expression LOOP Statement END
   14          | RETURN Expression

   15 Expression: Expression PLUS Expression
   16           | Expression MINUS Expression
   17           | Expression MUL Expression
   18           | Expression DIV Expression
   19           | Expression EQ Expression
   20           | Expression GE Expression
   21           | Expression GT Expression
   22           | Expression LE Expression
   23           | Expression LT Expression
   24           | NOT Expression
   25           | TRUE
   26           | FALSE
   27           | INTEGERNUMBER
   28           | REALNUMBER
   29           | IDENTIFIER
   30           | LPAREN Expression RPAREN

   31 Function: ROUTINE IDENTIFIER LPAREN RPAREN IS Declaration SEMICOLON Statement END


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VAR <TokenType> (258) 4
    TYPE <TokenType> (259)
    ROUTINE <TokenType> (260) 31
    RETURN <TokenType> (261) 14
    IS <TokenType> (262) 4 31
    RECORD <TokenType> (263) 9
    ARRAY <TokenType> (264) 8
    WHILE <TokenType> (265) 12
    FOR <TokenType> (266) 13
    LOOP <TokenType> (267) 12 13
    IF <TokenType> (268) 11
    THEN <TokenType> (269) 11
    ELSE <TokenType> (270) 11
    END <TokenType> (271) 9 11 12 13 31
    TRUE <TokenType> (272) 25
    FALSE <TokenType> (273) 26
    INTEGER <TokenType> (274) 5
    REAL <TokenType> (275) 7
    BOOLEAN <TokenType> (276) 6
    ASSIGN <TokenType> (277) 10
    LT <TokenType> (278) 23
    LE <TokenType> (279) 22
    GT <TokenType> (280) 21
    GE <TokenType> (281) 20
    EQ <TokenType> (282) 19
    NE <TokenType> (283)
    PLUS <TokenType> (284) 15
    MINUS <TokenType> (285) 16
    MUL <TokenType> (286) 17
    DIV <TokenType> (287) 18
    MOD <TokenType> (288)
    AND <TokenType> (289)
    OR <TokenType> (290)
    XOR <TokenType> (291)
    NOT <TokenType> (292) 24
    IDENTIFIER <TokenType> (293) 4 10 13 29 31
    INTEGERNUMBER <TokenType> (294) 8 27
    REALNUMBER <TokenType> (295) 28
    COMMA <TokenType> (296)
    SEMICOLON <TokenType> (297) 1 2 3 31
    LPAREN <TokenType> (298) 30 31
    RPAREN <TokenType> (299) 30 31
    LBRACKET <TokenType> (300) 8
    RBRACKET <TokenType> (301) 8
    DOT <TokenType> (302)
    COLON <TokenType> (303) 4
    RANGE <TokenType> (304) 13
    REVERSE <TokenType> (305)
    IN <TokenType> (306) 13
    NEWLINE <TokenType> (307)
    WHITESPACE <TokenType> (308)
    TAB <TokenType> (309)
    UNKNOWN <TokenType> (310)


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    Program (57)
        on left: 1 2 3
        on right: 0
    Declaration (58)
        on left: 4
        on right: 1 9 31
    Type (59)
        on left: 5 6 7 8 9
        on right: 4 8
    Statement (60)
        on left: 10 11 12 13 14
        on right: 2 11 12 13 31
    Expression (61)
        on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 4 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 30
    Function (62)
        on left: 31
        on right: 3


State 0

    0 $accept: . Program $end

    VAR         shift, and go to state 1
    ROUTINE     shift, and go to state 2
    RETURN      shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    IF          shift, and go to state 6
    IDENTIFIER  shift, and go to state 7

    Program      go to state 8
    Declaration  go to state 9
    Statement    go to state 10
    Function     go to state 11


State 1

    4 Declaration: VAR . IDENTIFIER COLON Type IS Expression

    IDENTIFIER  shift, and go to state 12


State 2

   31 Function: ROUTINE . IDENTIFIER LPAREN RPAREN IS Declaration SEMICOLON Statement END

    IDENTIFIER  shift, and go to state 13


State 3

   14 Statement: RETURN . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 21


State 4

   12 Statement: WHILE . Expression LOOP Statement END

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 22


State 5

   13 Statement: FOR . IDENTIFIER IN Expression RANGE Expression LOOP Statement END

    IDENTIFIER  shift, and go to state 23


State 6

   11 Statement: IF . Expression THEN Statement ELSE Statement END

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 24


State 7

   10 Statement: IDENTIFIER . ASSIGN Expression

    ASSIGN  shift, and go to state 25


State 8

    0 $accept: Program . $end

    $end  shift, and go to state 26


State 9

    1 Program: Declaration . SEMICOLON

    SEMICOLON  shift, and go to state 27


State 10

    2 Program: Statement . SEMICOLON

    SEMICOLON  shift, and go to state 28


State 11

    3 Program: Function . SEMICOLON

    SEMICOLON  shift, and go to state 29


State 12

    4 Declaration: VAR IDENTIFIER . COLON Type IS Expression

    COLON  shift, and go to state 30


State 13

   31 Function: ROUTINE IDENTIFIER . LPAREN RPAREN IS Declaration SEMICOLON Statement END

    LPAREN  shift, and go to state 31


State 14

   25 Expression: TRUE .

    $default  reduce using rule 25 (Expression)


State 15

   26 Expression: FALSE .

    $default  reduce using rule 26 (Expression)


State 16

   24 Expression: NOT . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 32


State 17

   29 Expression: IDENTIFIER .

    $default  reduce using rule 29 (Expression)


State 18

   27 Expression: INTEGERNUMBER .

    $default  reduce using rule 27 (Expression)


State 19

   28 Expression: REALNUMBER .

    $default  reduce using rule 28 (Expression)


State 20

   30 Expression: LPAREN . Expression RPAREN

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 33


State 21

   14 Statement: RETURN Expression .
   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    $default  reduce using rule 14 (Statement)


State 22

   12 Statement: WHILE Expression . LOOP Statement END
   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LOOP   shift, and go to state 43
    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42


State 23

   13 Statement: FOR IDENTIFIER . IN Expression RANGE Expression LOOP Statement END

    IN  shift, and go to state 44


State 24

   11 Statement: IF Expression . THEN Statement ELSE Statement END
   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    THEN   shift, and go to state 45
    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42


State 25

   10 Statement: IDENTIFIER ASSIGN . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 46


State 26

    0 $accept: Program $end .

    $default  accept


State 27

    1 Program: Declaration SEMICOLON .

    $default  reduce using rule 1 (Program)


State 28

    2 Program: Statement SEMICOLON .

    $default  reduce using rule 2 (Program)


State 29

    3 Program: Function SEMICOLON .

    $default  reduce using rule 3 (Program)


State 30

    4 Declaration: VAR IDENTIFIER COLON . Type IS Expression

    RECORD   shift, and go to state 47
    ARRAY    shift, and go to state 48
    INTEGER  shift, and go to state 49
    REAL     shift, and go to state 50
    BOOLEAN  shift, and go to state 51

    Type  go to state 52


State 31

   31 Function: ROUTINE IDENTIFIER LPAREN . RPAREN IS Declaration SEMICOLON Statement END

    RPAREN  shift, and go to state 53


State 32

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression
   24           | NOT Expression .

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 24 (Expression)]
    LE        [reduce using rule 24 (Expression)]
    GT        [reduce using rule 24 (Expression)]
    GE        [reduce using rule 24 (Expression)]
    EQ        [reduce using rule 24 (Expression)]
    PLUS      [reduce using rule 24 (Expression)]
    MINUS     [reduce using rule 24 (Expression)]
    MUL       [reduce using rule 24 (Expression)]
    DIV       [reduce using rule 24 (Expression)]
    $default  reduce using rule 24 (Expression)


State 33

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression
   30           | LPAREN Expression . RPAREN

    LT      shift, and go to state 34
    LE      shift, and go to state 35
    GT      shift, and go to state 36
    GE      shift, and go to state 37
    EQ      shift, and go to state 38
    PLUS    shift, and go to state 39
    MINUS   shift, and go to state 40
    MUL     shift, and go to state 41
    DIV     shift, and go to state 42
    RPAREN  shift, and go to state 54


State 34

   23 Expression: Expression LT . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 55


State 35

   22 Expression: Expression LE . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 56


State 36

   21 Expression: Expression GT . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 57


State 37

   20 Expression: Expression GE . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 58


State 38

   19 Expression: Expression EQ . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 59


State 39

   15 Expression: Expression PLUS . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 60


State 40

   16 Expression: Expression MINUS . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 61


State 41

   17 Expression: Expression MUL . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 62


State 42

   18 Expression: Expression DIV . Expression

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 63


State 43

   12 Statement: WHILE Expression LOOP . Statement END

    RETURN      shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    IF          shift, and go to state 6
    IDENTIFIER  shift, and go to state 7

    Statement  go to state 64


State 44

   13 Statement: FOR IDENTIFIER IN . Expression RANGE Expression LOOP Statement END

    TRUE           shift, and go to state 14
    FALSE          shift, and go to state 15
    NOT            shift, and go to state 16
    IDENTIFIER     shift, and go to state 17
    INTEGERNUMBER  shift, and go to state 18
    REALNUMBER     shift, and go to state 19
    LPAREN         shift, and go to state 20

    Expression  go to state 65


State 45

   11 Statement: IF Expression THEN . Statement ELSE Statement END

    RETURN      shift, and go to state 3
    WHILE       shift, and go to state 4
    FOR         shift, and go to state 5
    IF          shift, and go to state 6
    IDENTIFIER  shift, and go to state 7

    Statement  go to state 66


State 46

   10 Statement: IDENTIFIER ASSIGN Expression .
   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    $default  reduce using rule 10 (Statement)


State 47

    9 Type: RECORD . Declaration END

    VAR  shift, and go to state 1

    Declaration  go to state 67


State 48

    8 Type: ARRAY . LBRACKET INTEGERNUMBER RBRACKET Type

    LBRACKET  shift, and go to state 68


State 49

    5 Type: INTEGER .

    $default  reduce using rule 5 (Type)


State 50

    7 Type: REAL .

    $default  reduce using rule 7 (Type)


State 51

    6 Type: BOOLEAN .

    $default  reduce using rule 6 (Type)


State 52

    4 Declaration: VAR IDENTIFIER COLON Type . IS Expression

    IS  shift, and go to state 69


State 53

   31 Function: ROUTINE IDENTIFIER LPAREN RPAREN . IS Declaration SEMICOLON Statement END

    IS  shift, and go to state 70


State 54

   30 Expression: LPAREN Expression RPAREN .

    $default  reduce using rule 30 (Expression)


State 55

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression
   23           | Expression LT Expression .

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 23 (Expression)]
    LE        [reduce using rule 23 (Expression)]
    GT        [reduce using rule 23 (Expression)]
    GE        [reduce using rule 23 (Expression)]
    EQ        [reduce using rule 23 (Expression)]
    PLUS      [reduce using rule 23 (Expression)]
    MINUS     [reduce using rule 23 (Expression)]
    MUL       [reduce using rule 23 (Expression)]
    DIV       [reduce using rule 23 (Expression)]
    $default  reduce using rule 23 (Expression)


State 56

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   22           | Expression LE Expression .
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 22 (Expression)]
    LE        [reduce using rule 22 (Expression)]
    GT        [reduce using rule 22 (Expression)]
    GE        [reduce using rule 22 (Expression)]
    EQ        [reduce using rule 22 (Expression)]
    PLUS      [reduce using rule 22 (Expression)]
    MINUS     [reduce using rule 22 (Expression)]
    MUL       [reduce using rule 22 (Expression)]
    DIV       [reduce using rule 22 (Expression)]
    $default  reduce using rule 22 (Expression)


State 57

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   21           | Expression GT Expression .
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 21 (Expression)]
    LE        [reduce using rule 21 (Expression)]
    GT        [reduce using rule 21 (Expression)]
    GE        [reduce using rule 21 (Expression)]
    EQ        [reduce using rule 21 (Expression)]
    PLUS      [reduce using rule 21 (Expression)]
    MINUS     [reduce using rule 21 (Expression)]
    MUL       [reduce using rule 21 (Expression)]
    DIV       [reduce using rule 21 (Expression)]
    $default  reduce using rule 21 (Expression)


State 58

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   20           | Expression GE Expression .
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 20 (Expression)]
    LE        [reduce using rule 20 (Expression)]
    GT        [reduce using rule 20 (Expression)]
    GE        [reduce using rule 20 (Expression)]
    EQ        [reduce using rule 20 (Expression)]
    PLUS      [reduce using rule 20 (Expression)]
    MINUS     [reduce using rule 20 (Expression)]
    MUL       [reduce using rule 20 (Expression)]
    DIV       [reduce using rule 20 (Expression)]
    $default  reduce using rule 20 (Expression)


State 59

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   19           | Expression EQ Expression .
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 19 (Expression)]
    LE        [reduce using rule 19 (Expression)]
    GT        [reduce using rule 19 (Expression)]
    GE        [reduce using rule 19 (Expression)]
    EQ        [reduce using rule 19 (Expression)]
    PLUS      [reduce using rule 19 (Expression)]
    MINUS     [reduce using rule 19 (Expression)]
    MUL       [reduce using rule 19 (Expression)]
    DIV       [reduce using rule 19 (Expression)]
    $default  reduce using rule 19 (Expression)


State 60

   15 Expression: Expression . PLUS Expression
   15           | Expression PLUS Expression .
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 15 (Expression)]
    LE        [reduce using rule 15 (Expression)]
    GT        [reduce using rule 15 (Expression)]
    GE        [reduce using rule 15 (Expression)]
    EQ        [reduce using rule 15 (Expression)]
    PLUS      [reduce using rule 15 (Expression)]
    MINUS     [reduce using rule 15 (Expression)]
    MUL       [reduce using rule 15 (Expression)]
    DIV       [reduce using rule 15 (Expression)]
    $default  reduce using rule 15 (Expression)


State 61

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   16           | Expression MINUS Expression .
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 16 (Expression)]
    LE        [reduce using rule 16 (Expression)]
    GT        [reduce using rule 16 (Expression)]
    GE        [reduce using rule 16 (Expression)]
    EQ        [reduce using rule 16 (Expression)]
    PLUS      [reduce using rule 16 (Expression)]
    MINUS     [reduce using rule 16 (Expression)]
    MUL       [reduce using rule 16 (Expression)]
    DIV       [reduce using rule 16 (Expression)]
    $default  reduce using rule 16 (Expression)


State 62

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   17           | Expression MUL Expression .
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 17 (Expression)]
    LE        [reduce using rule 17 (Expression)]
    GT        [reduce using rule 17 (Expression)]
    GE        [reduce using rule 17 (Expression)]
    EQ        [reduce using rule 17 (Expression)]
    PLUS      [reduce using rule 17 (Expression)]
    MINUS     [reduce using rule 17 (Expression)]
    MUL       [reduce using rule 17 (Expression)]
    DIV       [reduce using rule 17 (Expression)]
    $default  reduce using rule 17 (Expression)


State 63

   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   18           | Expression DIV Expression .
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42

    LT        [reduce using rule 18 (Expression)]
    LE        [reduce using rule 18 (Expression)]
    GT        [reduce using rule 18 (Expression)]
    GE        [reduce using rule 18 (Expression)]
    EQ        [reduce using rule 18 (Expression)]
    PLUS      [reduce using rule 18 (Expression)]
    MINUS     [reduce using rule 18 (Expression)]
    MUL       [reduce using rule 18 (Expression)]
    DIV       [reduce using rule 18 (Expression)]
    $default  reduce using rule 18 (Expression)


State 64

   12 Statement: WHILE Expression LOOP Statement . END

    END  shift, and go to state 71


State 65

   13 Statement: FOR IDENTIFIER IN Expression . RANGE Expression LOOP Statement END
   15 Expression: Expression . PLUS Expression
   16           | Expression . MINUS Expression
   17           | Expression . MUL Expression
   18           | Expression . DIV Expression
   19           | Expression . EQ Expression
   20           | Expression . GE Expression
   21           | Expression . GT Expression
   22           | Expression . LE Expression
   23           | Expression . LT Expression

    LT     shift, and go to state 34
    LE     shift, and go to state 35
    GT     shift, and go to state 36
    GE     shift, and go to state 37
    EQ     shift, and go to state 38
    PLUS   shift, and go to state 39
    MINUS  shift, and go to state 40
    MUL    shift, and go to state 41
    DIV    shift, and go to state 42
    RANGE  shift, and go to state 72


State 66

   11 Statement: IF Expression THEN Statement . ELSE Statement END

    ELSE  shift, and go to state 73


State 67

    9 Type: RECORD Declaration . END

    END  shift, and go to state 74


State 68

    8 Type: ARRAY LBRACKET . INTEGERNUMBER RBRACKET Type

    INTEGERNUMBER  shift, and go to state 75


State 69

    4 Declaration: VAR IDENTIFIER COLON Type IS . Expression
